fix(docs,configs): align Proximum :store API, schema tuning keys, doc drift, remove examples namespace
Co-authored-by: Cursor <cursoragent@cursor.com>